--- a/seaborn_stripplot.ipynb
+++ b/seaborn_stripplot.ipynb
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we will plot strip plot using seaborn.Boxplot for one variable"
+    "Now we will plot strip plot using seaborn.stripplot for one variable"
    ]
   },
   {
